--- a/DEVinBricks/appsettings.json
+++ b/DEVinBricks/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ServerConnection": "Server=YOURSERVER\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;"
+  }
 }
