--- a/DEVinBricks/DEVinBricks.csproj
+++ b/DEVinBricks/DEVinBricks.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="FluentValidation" Version="11.1.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.7" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7">
