--- a/DEVinBricks/appsettings.Development.json
+++ b/DEVinBricks/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ServerConnection": "Server=VERONI-RYZEN\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;"
   }
 }
