--- a/DEVinBricks/appsettings.json
+++ b/DEVinBricks/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ServerConnection": "Server=YOUR-SERVER\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;"
+    "ServerConnection": "Server=DESKTOP-2NDHOTF;Database=DEVinBricks;Trusted_Connection=True;"
   }
 }
