--- a/DEVinBricks.Teste/DEVinBricks.Teste.csproj
+++ b/DEVinBricks.Teste/DEVinBricks.Teste.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
+	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+	  <PackageReference Include="Moq" Version="4.18.1" />
+	  <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
   </ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\DEVinBricks\DEVinBricks.csproj" />
