--- a/DEVinBricks/appsettings.Development.json
+++ b/DEVinBricks/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ServerConnection": "Server=DESKTOP-J2DDPMH\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;"
+    "ServerConnection": "Server=DESKTOP-K5J9RD0\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;"
   }
 }
