Implementa metodo Get de comprador

--- a/DEVinBricks/appsettings.json
+++ b/DEVinBricks/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ServerConnection": "Server=YOURSERVICE\\SQLEXPRESS01;Database=DEVinBricks;Trusted_Connection=True;"
+    "ServerConnection": "Server=LAPTOP-5G41UA0R\\SQLEXPRESS;Database=DevInBricks;Trusted_Connection=True;"
   }
 }
