--- a/DEVinBricks.Teste/DEVinBricks.Teste.csproj
+++ b/DEVinBricks.Teste/DEVinBricks.Teste.csproj
@@ -11,12 +11,15 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-    <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
-    <PackageReference Include="coverlet.collector" Version="3.1.0" />
-	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
 	  <PackageReference Include="Moq" Version="4.18.1" />
-	  <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
+	  <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
   </ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\DEVinBricks\DEVinBricks.csproj" />
