--- a/DEVinBricks/DEVinBricks.csproj
+++ b/DEVinBricks/DEVinBricks.csproj
@@ -20,6 +20,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 	  </PackageReference>
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	  <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
   </ItemGroup>
 
 </Project>
