--- a/DEVinBricks/appsettings.json
+++ b/DEVinBricks/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ServerConnection": "Server=VERONI-RYZEN\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;"
+    "ServerConnection": "Server=YOURSERVER\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;"
   }
 }
