--- a/DEVinBricks/appsettings.Development.json
+++ b/DEVinBricks/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ServerConnection": "Server=localhost\\SQLEXPRESS01;Database=DEVinBricks;Trusted_Connection=True;"
+    "ServerConnection": "Server=DOUGLAS\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;"
   }
 }
