--- a/DEVinBricks/appsettings.json
+++ b/DEVinBricks/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ServerConnection": "localhost\\SQLEXPRESS;Database=DevInBricks;Trusted_Connection=True;"
+    "ServerConnection": "DOUGLAS\\SQLEXPRESS;Database=DevInBricks;Trusted_Connection=True;"
   }
 }
