Cria endpoint de Estados

--- a/DEVinBricks/appsettings.Development.json
+++ b/DEVinBricks/appsettings.Development.json
@@ -11,6 +11,7 @@
     "ServerConnection_DESKTOP-J2DDPMH": "Server=DESKTOP-J2DDPMH\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;",
     "ServerConnection_VERONI-RYZEN": "Server=VERONI-RYZEN\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;",
     "ServerConnection_PRESTO-DESKTOP": "Server=PRESTO-DESKTOP\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;",
+    "ServerConnection_NARRIMAN-LIMA": "Server=NARRIMAN-LIMA\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;",
     "ServerConnection": "Server=DESKTOP-J2DDPMH\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;"
   }
 }
