--- a/DEVinBricks/appsettings.Development.json
+++ b/DEVinBricks/appsettings.Development.json
@@ -12,6 +12,7 @@
     "ServerConnection_VERONI-RYZEN": "Server=VERONI-RYZEN\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;",
     "ServerConnection_PRESTO-DESKTOP": "Server=PRESTO-DESKTOP\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;",
     "ServerConnection_NARRIMAN-LIMA": "Server=NARRIMAN-LIMA\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;",
+    "ServerConnection_LAPTOP-5G41UA0R": "Server=LAPTOP-5G41UA0R\\SQLEXPRESS;Database=DevInBricks;Trusted_Connection=True;",
     "ServerConnection": "Server=DESKTOP-J2DDPMH\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;"
   }
 }
