ajustes de depenecia e Ajuste em CriarVenda

--- a/DEVinBricks/appsettings.Development.json
+++ b/DEVinBricks/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ServerConnection_NOME-DO-COMPUTADOR": "Server=YOURSERVER\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;",
+    "ServerConnection_DESKTOP-FFV2PL8": "Server=DESKTOP-FFV2PL8\\SQLEXPRESS01;Database=DEVinBricks;Trusted_Connection=True;",
     "ServerConnection_DESKTOP-J2DDPMH": "Server=DESKTOP-J2DDPMH\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;",
     "ServerConnection_VERONI-RYZEN": "Server=VERONI-RYZEN\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;",
     "ServerConnection_PRESTO-DESKTOP": "Server=PRESTO-DESKTOP\\SQLEXPRESS;Database=DEVinBricks;Trusted_Connection=True;",
